force-app/main/default/objects/Expense_Code__c/Expense_Code__c.object-meta.xml
<CustomObject>
    <label>Expense Code</label>
    <nameField>
        <label>Expense Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>