force-app/main/default/objects/Expense_Code__c/fields/Expenditure_Description__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Description__c</fullName>
    <label>Expenditure Description</label>
    <type>TextArea</type>
</CustomField>