force-app/main/default/objects/Expense_Code__c/fields/Expense_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_Name__c</fullName>
    <label>Expense Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>