force-app/main/default/objects/Expense_Code__c/listViews/Active_expense_codes.listView-meta.xml
<ListView>
    <fullName>Active_expense_codes</fullName>
    <columns>NAME</columns>
    <columns>Expenditure_Description__c</columns>
    <columns>Expense_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive</value>
    </filters>
    <label>Active expense codes</label>
</ListView>